[SP-2] Leaded to common standart with Restore Component

--- a/SmartPeopleUI/lib/account/change-password/change-password.component.html
+++ b/SmartPeopleUI/lib/account/change-password/change-password.component.html
@@ -4,31 +4,23 @@
       <div class="description">Please insert a new password</div>
 
       <div class="input-group">
-         <div class="label">
+         <div class="input-control">
             <label for="new-password">New password:</label>
-         </div>
-
-         <div class="inputs">
             <input type="text"
                    id="new-password"
                    class="password"
                    placeholder="Type a new password here"/>
 
          </div>
-      </div>
-      <div class="input-group">
-         <div class="label">
+         <div class="input-control">
             <label for="repeat-password">Repeat password:</label>
-         </div>
-
-         <div class="inputs">
             <input type="text"
                    id="repeat-password"
                    class="password"
                    placeholder="Repeat the password here"/>
 
-            <a mdRaisedButton class="md-primary next-btn">Change password</a>
          </div>
+         <a mdRaisedButton class="md-primary next-btn">Change password</a>
       </div>
    </form>
 </sp-info>
