--- a/SmartPeopleUI/lib/account/change-password/change-password.component.less
+++ b/SmartPeopleUI/lib/account/change-password/change-password.component.less
@@ -1,3 +1,5 @@
+@verticalPadding: 5px;
+
 .form {
    align-items: center;
    display: flex;
@@ -5,35 +7,38 @@
 
    .input-group {
       display: flex;
+      flex-direction: column;
       padding-top: 30px;
       width: 80%;
 
-      .label {
-         color: #777;
-         font-size: 1.1rem;
-         font-weight: bold;
-         margin-top: 9px;
-         width: 30%;
-      }
-
-      .inputs {
+      .input-control {
+         align-items: flex-end;
          display: flex;
-         flex: 1;
-         flex-direction: column;
+         margin-top: 10px;
+
+         label {
+            color: #777;
+            font-size: 1.1rem;
+            font-weight: bold;
+            padding: @verticalPadding 0;
+            width: 30%;
+         }
 
          .password {
+            flex: 1;
             font-family: cursive;
             font-size: 1em;
             outline-color: #3f51b5;
-            padding: 5px 10px;
+            padding: @verticalPadding 10px;
          }
+      }
 
-         .next-btn {
-            align-self: flex-start;
-            line-height: 28px;
-            margin: 10px 0;
-            min-width: 74px;
-         }
+      .next-btn {
+         align-self: flex-start;
+         flex: 1;
+         line-height: 28px;
+         margin: 10px 0 10px 30%;
+         min-width: 74px;
       }
    }
 }
