Added and adjusted Sign Up component

--- a/SmartPeopleUI/lib/app.component.less
+++ b/SmartPeopleUI/lib/app.component.less
@@ -1,14 +1,14 @@
-.app{
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
+.app {
+   display: flex;
+   flex-direction: column;
+   min-height: 100vh;
 
-  .header{
-    flex: none;
-  }
+   .header {
+      flex: none;
+   }
 
-  .content{
-    flex: 1;
-    background: linear-gradient(180deg, #fcf1f1 0%, #f6fcf8 50%, #c4edc6 100%);
-  }
+   .content {
+      background-color: #F0F1F2;
+      flex: 1;
+   }
 }
