--- a/SmartPeopleUI/lib/shared/header/header.component.html
+++ b/SmartPeopleUI/lib/shared/header/header.component.html
@@ -1,7 +1,6 @@
 <header class="header">
 
-    <!--<a class="root-link" [routerLink]="['Home']">-->
-    <a class="root-link">
+    <a class="root-link" [routerLink]="['Home']">
         <img class="logo" src="../images/top-logo.png"/>
     </a>
 
