[SP-5] Created the mock of Error autorization page

--- a/SmartPeopleUI/lib/shared/header/login/login.component.html
+++ b/SmartPeopleUI/lib/shared/header/login/login.component.html
@@ -14,5 +14,8 @@
         </div>
 
         <button mdRaisedButton class="custom-md-success sign-in-btn">Sign in</button>
+        <!---->
+        <a mdRaisedButton class="md-accent mock" [routerLink]="['ErrorAuthorization']" >Error auth mock</a>
+        <!--TODO delete after best ErrorAuthComponent implementation-->
     </form>
 </div>
