--- a/SmartPeopleUI/lib/shared/header/login/login.component.less
+++ b/SmartPeopleUI/lib/shared/header/login/login.component.less
@@ -53,5 +53,13 @@
       background: rgb(76, 175, 80);
       color: rgb(255, 255, 255);
     }
+
+    .mock { //TODO delete after best ErrorAuthComponent implementation
+      min-height: 20px;
+      height: 22px;
+      line-height: 12px;
+      display: flex;
+      align-self: center;
+    }
   }
 }
