--- a/SmartPeopleUI/lib/shared/header/login/login.component.html
+++ b/SmartPeopleUI/lib/shared/header/login/login.component.html
@@ -1,19 +1,37 @@
 <div class="login">
-	<form name="login" action="#" method="post" class="form">
+   <form name="login"
+         action="#"
+         method="post"
+         class="form">
 
-		<div class="email input-group">
-			<label for="current-email">Email</label>
-			<input type="text" name="login" id="current-email" required sp-validate-email [(ngModel)]="email"
-				   ngControl="email"/>
+      <div class="email input-group">
+         <label for="current-email">Email</label>
+         <input type="text"
+                name="login"
+                id="current-email"
+                [(ngModel)]="email"
+                ngControl="email"
+                sp-validate-email
+                required/>
 
-			<md-checkbox md-no-ink aria-label="Remember me" class="helper"> Remember me</md-checkbox>
-		</div>
+         <md-checkbox md-no-ink
+                      aria-label="Remember me"
+                      class="helper">Remember me</md-checkbox>
+      </div>
 
-		<div class="password input-group">
-			<label for="current-password">Password</label>
-			<input mdInput type="password" name="password" id="current-password"/>
-			<a [routerLink]="['RestoreAccess']" class="helper">Forgot password ?</a>
-		</div>
+      <div class="password input-group">
+         <label for="current-password">Password</label>
+         <input type="password"
+                name="password"
+                id="current-password"
+                [(ngModel)]="password"
+                ngControl="password"
+                sp-validate-password
+                required/>
+
+         <a [routerLink]="['RestoreAccess']"
+            class="helper">Forgot password ?</a>
+      </div>
 
 		<button mdRaisedButton class="custom-md-success sign-in-btn">Sign in</button>
 		<!---->
