[SP-48] used validation directives in error auth component

--- a/SmartPeopleUI/lib/account/error-authorization/error-authorization.component.html
+++ b/SmartPeopleUI/lib/account/error-authorization/error-authorization.component.html
@@ -1,15 +1,24 @@
 <sp-info>
-   <form name="error-authorization-form" action="#" method="post" class="form">
+   <form name="error-authorization-form"
+         action="#"
+         method="post"
+         class="form">
+
       <div class="title">There is no such account in Data base</div>
       <div class="description">May be you make some mistake?</div>
 
       <div class="input-group">
          <div class="input-control">
             <label for="repeat-input">Email:</label>
+
             <input type="text"
                    id="repeat-input"
                    class="repeat-input"
-                   placeholder="Type your email here again"/>
+                   placeholder="Type your email here again"
+                   [(ngModel)]="email"
+                   ngControl="email"
+                   sp-validate-email
+                   required/>
 
          </div>
          <button mdRaisedButton class="md-primary next-btn">Repeat</button>
