--- a/SmartPeopleUI/lib/account/change-password/change-password.component.html
+++ b/SmartPeopleUI/lib/account/change-password/change-password.component.html
@@ -9,7 +9,11 @@
             <input type="text"
                    id="new-password"
                    class="password"
-                   placeholder="Type a new password here"/>
+                   placeholder="Type a new password here"
+                   [(ngModel)]="password1"
+                   ngControl="password1"
+                   sp-validate-password
+                   required/>
 
          </div>
          <div class="input-control">
@@ -17,7 +21,11 @@
             <input type="text"
                    id="repeat-password"
                    class="password"
-                   placeholder="Repeat the password here"/>
+                   placeholder="Repeat the password here"
+                   [(ngModel)]="password2"
+                   ngControl="password2"
+                   sp-validate-password
+                   required/>
 
          </div>
          <a mdRaisedButton class="md-primary next-btn">Change password</a>
