[Phase-1] added slogan to logo

--- a/SmartPeopleUI/lib/shared/header/header.component.html
+++ b/SmartPeopleUI/lib/shared/header/header.component.html
@@ -2,6 +2,9 @@
 
     <a class="root-link" [routerLink]="['Home']">
         <img class="logo" src="../images/top-logo.png"/>
+        <!---->
+        <span class="slogan">Keep your knowledge</span>
+        <!--TODO include into svg img and delete-->
     </a>
 
     <sp-login></sp-login>
