--- a/lib/account/sign-up/sign-up.component.html
+++ b/lib/account/sign-up/sign-up.component.html
@@ -1,89 +1,39 @@
-<div class="wrapper">
-   <div class="content-logo">
-      <img class="logo" src="../images/logo.png"/>
-   </div>
-   <div class="sign-up">
-      <form name="sign-up-form"
-            action="#"
-            method="post"
-            class="form">
+<div class="component">
 
-         <div class="input-wrapper">
-            <div class="title">
-               <h3>Sign Up</h3>
-            </div>
-         </div>
-         <div class="input-wrapper">
+	<div class="content-logo">
+		<img class="logo" src="../images/logo.png"/>
+	</div>
 
-            <input type="text"
-                   placeholder="Name"
-                   name="name"
-                   [(ngModel)]="name"
-                   ngControl="name"
-                   sp-validate-name
-                   required/>
+	<div class="sign-up">
+		<form name="sign-up-form" [ngFormModel]="form" class="form">
 
-            <input type="text"
-                   placeholder="Surname"
-                   name="surname"
-                   [(ngModel)]="surname"
-                   ngControl="surname"
-                   sp-validate-name
-                   required/>
+			<div class="title">
+				<h3>Sign Up</h3>
+			</div>
 
-         </div>
-         <div class="input-wrapper">
+			<div class="name-group">
+				<input type="text" placeholder="Name" name="name" ngControl="name"/>
+				<input type="text" placeholder="Surname" name="surname" ngControl="surname"/>
+			</div>
 
-            <input type="text"
-                   placeholder="Email"
-                   name="email"
-                   [(ngModel)]="email"
-                   ngControl="email"
-                   sp-validate-email
-                   required/>
+			<input type="text" placeholder="Email" name="email" ngControl="email"/>
 
-         </div>
-         <div class="input-wrapper">
-            <input type="password"
-                   placeholder="Password"
-                   name="password1"
-                   [(ngModel)]="password1"
-                   ngControl="password1"
-                   sp-validate-password
-                   required/>
-         </div>
-         <div class="input-wrapper">
-            <input type="password"
-                   placeholder="Repeat password"
-                   name="password2"
-                   [(ngModel)]="password2"
-                   ngControl="password2"
-                   sp-validate-password
-                   required/>
-         </div>
-         <div class="input-wrapper">
-            <div class="gender">
+			<input type="password" placeholder="Password" name="password" ngControl="password"/>
 
-               <input type="radio"
-                      name="gender"
-                      value="male"
-                      id="male"/>
+			<input type="password" placeholder="Repeat password" name="passwordRepeat" ngControl="passwordRepeat"/>
 
-               <label for="male">Male</label>
-            </div>
-            <div class="gender">
+			<div class="gender-group">
+				<div class="gender">
+					<input type="radio" name="gender" value="male" id="male"/>
+					<label for="male">Male</label>
+				</div>
+				<div class="gender">
+					<input type="radio" name="gender" value="female" id="female"/>
+					<label for="female">Female</label>
+				</div>
+			</div>
 
-               <input type="radio"
-                      name="gender"
-                      value="female"
-                      id="female"/>
-
-               <label for="female">Female</label>
-               </div>
-         </div>
-         <div class="input-wrapper">
-            <button mdRaisedButton class="custom-md-success sign-up-btn">Sign up</button>
-         </div>
-      </form>
-   </div>
+			<button mdRaisedButton class="custom-md-success sign-up-btn">Sign up</button>
+		</form>
+	</div>
 </div>
