--- a/lib/shared/header/login/login.component.less
+++ b/lib/shared/header/login/login.component.less
@@ -61,5 +61,13 @@
       display: flex;
       align-self: center;
     }
+
+    .ng-valid[required] {
+      border-left: 5px solid #42A948;
+    }
+
+    .ng-invalid {
+      border-left: 5px solid #a94442;
+    }
   }
 }
