--- a/lib/shared/header/login/login.component.less
+++ b/lib/shared/header/login/login.component.less
@@ -62,12 +62,21 @@
       align-self: center;
     }
 
-    .ng-valid[required] {
+    .ng-valid {
       border-left: 5px solid #42A948;
     }
 
     .ng-invalid {
       border-left: 5px solid #a94442;
+    }
+
+    .validation-notification {
+      background-color: #DE8E8E;
+      border: 1px solid pink;
+      padding: 5px 10px;
+      position: absolute;
+      top: 60px;
+      z-index: 9999;
     }
   }
 }
