[SP-47] Added validation notification into RestoreAccessComponent

--- a/lib/account/restore-access/restore-access.component.less
+++ b/lib/account/restore-access/restore-access.component.less
@@ -41,5 +41,16 @@
       margin: 10px 0 10px 15%;
       min-width: 74px;
     }
+
+    .validation-notification {
+      background-color: #DE8E8E;
+      border: 1px solid pink;
+      left: 74px;
+      padding: 5px 10px;
+      position: relative;
+      width: 80%;
+      z-index: 9999;
+    }
+    //TODO create semantic markup
   }
 }
