--- a/lib/shared/header/login/login.component.html
+++ b/lib/shared/header/login/login.component.html
@@ -9,7 +9,7 @@
                 ngControl="email"
                 #email/>
 
-         <div *ngIf="isValid('email')" class="validation-notification">
+         <div *ngIf="!isValid('email')" class="validation-notification">
             Email is required
          </div>
 
@@ -25,7 +25,7 @@
                 ngControl="password"
                 #password/>
 
-         <div *ngIf="isValid('password')" class="validation-notification">
+         <div *ngIf="!isValid('password')" class="validation-notification">
             Password is required
          </div>
          <a [routerLink]="['RestoreAccess']" class="helper">Forgot password ?</a>
