--- a/lib/shared/header/login/login.component.less
+++ b/lib/shared/header/login/login.component.less
@@ -63,12 +63,7 @@
     }
 
     .validation-notification {
-      background-color: #DE8E8E;
-      border: 1px solid pink;
-      padding: 5px 10px;
-      position: absolute;
-      top: 60px;
-      z-index: 9999;
+      margin: 5px 0 10px 0%;
     }
   }
 }
