--- a/lib/account/restore-access/restore-access.component.less
+++ b/lib/account/restore-access/restore-access.component.less
@@ -43,14 +43,7 @@
     }
 
     .validation-notification {
-      background-color: #DE8E8E;
-      border: 1px solid pink;
-      left: 74px;
-      padding: 5px 10px;
-      position: relative;
-      width: 80%;
-      z-index: 9999;
+      margin: 10px 0 10px 5.3%;
     }
-    //TODO create semantic markup
   }
 }
