--- a/lib/shared/header/login/login.component.html
+++ b/lib/shared/header/login/login.component.html
@@ -4,10 +4,7 @@
       <div class="email input-group">
          <label for="current-email">Email</label>
          <input type="text" name="email" id="current-email" ngControl="email"/>
-
-         <div *ngIf="!isValid('email')" class="validation-notification">
-            Email is required
-         </div>
+         <sp-validation-notification *ngIf="!isValid('email')" [message]="messages['email']"></sp-validation-notification>
 
          <md-checkbox aria-label="Remember me" class="helper" md-no-ink>Remember me</md-checkbox>
       </div>
@@ -16,10 +13,8 @@
          <label for="current-password">Password</label>
 
          <input type="password" name="password" id="current-password" ngControl="password">
+         <sp-validation-notification *ngIf="!isValid('password')" [message]="messages['password']"></sp-validation-notification>
 
-         <div *ngIf="!isValid('password')" class="validation-notification">
-            Password is required
-         </div>
          <a [routerLink]="['RestoreAccess']" class="helper">Forgot password ?</a>
       </div>
 
