--- a/lib/account/sign-up/sign-up.component.less
+++ b/lib/account/sign-up/sign-up.component.less
@@ -62,6 +62,10 @@
 				min-width: 200px;
 				font-size: 1.5em;
 			}
+
+			.validation-notification {
+				margin: 0px 0 10px 5.3%;
+			}
 		}
 	}
 }
