--- a/lib/account/error-authorization/error-authorization.component.html
+++ b/lib/account/error-authorization/error-authorization.component.html
@@ -1,8 +1,5 @@
 <sp-info>
-   <form name="error-authorization-form"
-         action="#"
-         method="post"
-         class="form">
+   <form name="error-authorization-form" action="#" method="post" class="form" [ngFormModel]="form">
 
       <div class="title">There is no such account in Data base</div>
       <div class="description">May be you make some mistake?</div>
@@ -10,17 +7,16 @@
       <div class="input-group">
          <div class="input-control">
             <label for="repeat-input">Email:</label>
-
             <input type="text"
+                   name="email"
                    id="repeat-input"
                    class="repeat-input"
-                   placeholder="Type your email here again"
-                   [(ngModel)]="email"
                    ngControl="email"
-                   sp-validate-email
-                   required/>
+                   placeholder="Type your email here again"/>
 
          </div>
+         <sp-validation-notification *ngIf="!isValid('email')" [message]="messages['email']"></sp-validation-notification>
+
          <button mdRaisedButton class="md-primary next-btn">Repeat</button>
          <a mdRaisedButton class="custom-md-success sign-up-btn next-btn" [routerLink]="['Home']">Sign up</a>
       </div>
