--- a/lib/account/error-authorization/error-authorization.component.less
+++ b/lib/account/error-authorization/error-authorization.component.less
@@ -51,5 +51,9 @@
          min-width: 200px;
          font-size: 1.5em;
       }
+
+      .validation-notification {
+         margin: 10px 0 10px 7%;
+      }
    }
 }
