[SP-49] Created validation for Change Password form

--- a/lib/account/change-password/change-password.component.html
+++ b/lib/account/change-password/change-password.component.html
@@ -1,33 +1,35 @@
 <sp-info>
-   <form name="change-password-form" action="#" method="post" class="form">
+   <form name="change-password-form" action="#" method="post" class="form" [ngFormModel]="form">
       <div class="title">Change password</div>
       <div class="description">Please insert a new password</div>
 
       <div class="input-group">
          <div class="input-control">
             <label for="new-password">New password:</label>
-            <input type="text"
+
+            <input type="password"
+                   name="password"
                    id="new-password"
                    class="password"
                    placeholder="Type a new password here"
-                   [(ngModel)]="password1"
-                   ngControl="password1"
-                   sp-validate-password
-                   required/>
+                   ngControl="password">
 
          </div>
+         <sp-validation-notification *ngIf="!isValid('password')" [message]="messages['password']"></sp-validation-notification>
+
          <div class="input-control">
             <label for="repeat-password">Repeat password:</label>
-            <input type="text"
+
+            <input type="password"
+                   name="passwordRepeat"
                    id="repeat-password"
                    class="password"
                    placeholder="Repeat the password here"
-                   [(ngModel)]="password2"
-                   ngControl="password2"
-                   sp-validate-password
-                   required/>
+                   ngControl="passwordRepeat"/>
 
          </div>
+         <sp-validation-notification *ngIf="!isValid('passwordRepeat')" [message]="messages['passwordRepeat']"></sp-validation-notification>
+
          <a mdRaisedButton class="md-primary next-btn">Change password</a>
       </div>
    </form>
