--- a/lib/account/change-password/change-password.component.less
+++ b/lib/account/change-password/change-password.component.less
@@ -40,5 +40,9 @@
          margin: 10px 0 10px 35%;
          min-width: 74px;
       }
+
+      .validation-notification {
+         margin: 0px 0 10px 12.5%;
+      }
    }
 }
