--- a/lib/account/change-password/change-password.component.html
+++ b/lib/account/change-password/change-password.component.html
@@ -30,7 +30,7 @@
          </div>
          <sp-validation-notification *ngIf="!isValid('passwordRepeat')" [message]="messages['passwordRepeat']"></sp-validation-notification>
 
-         <a mdRaisedButton class="md-primary next-btn">Change password</a>
+         <button mdRaisedButton class="md-primary next-btn">Change password</button>
       </div>
    </form>
 </sp-info>
