--- a/lib/account/error-authorization/error-authorization.component.html
+++ b/lib/account/error-authorization/error-authorization.component.html
@@ -18,7 +18,7 @@
          <sp-validation-notification *ngIf="!isValid('email')" [message]="messages['email']"></sp-validation-notification>
 
          <button mdRaisedButton class="md-primary next-btn">Repeat</button>
-         <a mdRaisedButton class="custom-md-success sign-up-btn next-btn" [routerLink]="['Home']">Sign up</a>
+         <button mdRaisedButton class="custom-md-success sign-up-btn next-btn" [routerLink]="['Home']">Sign up</button>
       </div>
    </form>
 </sp-info>
