--- a/lib/shared/header/login/login.component.html
+++ b/lib/shared/header/login/login.component.html
@@ -3,8 +3,8 @@
 
       <div class="email input-group">
          <label for="current-email">Email</label>
-         <input type="text" name="email" id="current-email" ngControl="email"/>
-         <sp-validation-notification *ngIf="!isValid('email')" [message]="messages['email']"></sp-validation-notification>
+         <input type="text" name="email" id="current-email" (blur)="getMessage('email')" ngControl="email"/>
+         <sp-validation-notification *ngIf="!isValid('email')" [message]="getMessage('email')"></sp-validation-notification>
 
          <md-checkbox aria-label="Remember me" class="helper" md-no-ink>Remember me</md-checkbox>
       </div>
@@ -12,8 +12,8 @@
       <div class="password input-group">
          <label for="current-password">Password</label>
 
-         <input type="password" name="password" id="current-password" ngControl="password">
-         <sp-validation-notification *ngIf="!isValid('password')" [message]="messages['password']"></sp-validation-notification>
+         <input type="password" name="password" id="current-password" (blur)="getMessage('password')" ngControl="password">
+         <sp-validation-notification *ngIf="!isValid('password')" [message]="getMessage('password')"></sp-validation-notification>
 
          <a [routerLink]="['RestoreAccess']" class="helper">Forgot password ?</a>
       </div>
