--- a/lib/shared/header/login/login.component.html
+++ b/lib/shared/header/login/login.component.html
@@ -3,18 +3,19 @@
 
       <div class="email input-group">
          <label for="current-email">Email</label>
-         <input type="text" name="email" id="current-email" (blur)="getMessage('email')" ngControl="email"/>
-         <sp-validation-notification *ngIf="!isValid('email')" [message]="getMessage('email')"></sp-validation-notification>
-
+         <input type="text" name="email" id="current-email" ngControl="email"/>
+         <sp-validation-notification *ngIf="isEmpty('email')" [message]="'Email is required'"></sp-validation-notification>
+         <sp-validation-notification *ngIf="isIncorrect('email')" [message]="'Email is incorrect'"></sp-validation-notification>
          <md-checkbox aria-label="Remember me" class="helper" md-no-ink>Remember me</md-checkbox>
       </div>
 
       <div class="password input-group">
          <label for="current-password">Password</label>
-
-         <input type="password" name="password" id="current-password" (blur)="getMessage('password')" ngControl="password">
-         <sp-validation-notification *ngIf="!isValid('password')" [message]="getMessage('password')"></sp-validation-notification>
-
+         <input type="password" name="password" id="current-password" ngControl="password">
+         <sp-validation-notification *ngIf="isEmpty('password')" [message]="'Password is required'"></sp-validation-notification>
+         <sp-validation-notification *ngIf="isTooShort('password')" [message]="'Password is too short'"></sp-validation-notification>
+         <sp-validation-notification *ngIf="isTooLong('password')" [message]="'Password is too long'"></sp-validation-notification>
+         <sp-validation-notification *ngIf="isIncorrect('password')" [message]="'Password is incorrect'"></sp-validation-notification>
          <a [routerLink]="['RestoreAccess']" class="helper">Forgot password ?</a>
       </div>
 
