--- a/lib/account/restore-access/restore-access.component.html
+++ b/lib/account/restore-access/restore-access.component.html
@@ -16,7 +16,8 @@
                    ngControl="email"/>
 
          </div>
-         <sp-validation-notification *ngIf="!isValid('email')" [message]="messages['email']"></sp-validation-notification>
+         <sp-validation-notification *ngIf="isRequired('email')" [message]="'Email is required'"></sp-validation-notification>
+         <sp-validation-notification *ngIf="isUnhandledError('email')" [message]="'Email is incorrect'"></sp-validation-notification>
          <a mdRaisedButton class="md-primary next-btn" [routerLink]="['ChangePassword']">Next</a>
       </div>
    </form>
