[SP-52] added dynamic notification for change password component

--- a/lib/account/change-password/change-password.component.html
+++ b/lib/account/change-password/change-password.component.html
@@ -15,7 +15,10 @@
                    ngControl="password">
 
          </div>
-         <sp-validation-notification *ngIf="!isValid('password')" [message]="messages['password']"></sp-validation-notification>
+         <sp-validation-notification *ngIf="isRequired('password')" [message]="'Password is required'"></sp-validation-notification>
+         <sp-validation-notification *ngIf="isInsufficientLength('password')" [message]="'Password is too short'"></sp-validation-notification>
+         <sp-validation-notification *ngIf="isLengthExcess('password')" [message]="'Password is too long'"></sp-validation-notification>
+         <sp-validation-notification *ngIf="isUnhandledError('password')" [message]="'Password is incorrect'"></sp-validation-notification>
 
          <div class="input-control">
             <label for="repeat-password">Repeat password:</label>
@@ -28,7 +31,11 @@
                    ngControl="passwordRepeat"/>
 
          </div>
-         <sp-validation-notification *ngIf="!isValid('passwordRepeat')" [message]="messages['passwordRepeat']"></sp-validation-notification>
+         <sp-validation-notification *ngIf="isRequired('password')" [message]="'Password is required'"></sp-validation-notification>
+         <sp-validation-notification *ngIf="isInsufficientLength('password')" [message]="'Password is too short'"></sp-validation-notification>
+         <sp-validation-notification *ngIf="isLengthExcess('password')" [message]="'Password is too long'"></sp-validation-notification>
+         <sp-validation-notification *ngIf="isUnhandledError('password')" [message]="'Password is incorrect'"></sp-validation-notification>
+         <sp-validation-notification *ngIf="isEqual('passwordRepeat', 'password')" [message]="'Passwords are not equal'"></sp-validation-notification>
 
          <button mdRaisedButton class="md-primary next-btn">Change password</button>
       </div>
