--- a/lib/account/error-authorization/error-authorization.component.html
+++ b/lib/account/error-authorization/error-authorization.component.html
@@ -15,8 +15,8 @@
                    placeholder="Type your email here again"/>
 
          </div>
-         <sp-validation-notification *ngIf="!isValid('email')" [message]="messages['email']"></sp-validation-notification>
-
+         <sp-validation-notification *ngIf="isRequired('email')" [message]="'Email is required'"></sp-validation-notification>
+         <sp-validation-notification *ngIf="isUnhandledError('email')" [message]="'Email is incorrect'"></sp-validation-notification>
          <button mdRaisedButton class="md-primary next-btn">Repeat</button>
          <button mdRaisedButton class="custom-md-success sign-up-btn next-btn" [routerLink]="['Home']">Sign up</button>
       </div>
