--- a/lib/account/change-password/change-password.component.html
+++ b/lib/account/change-password/change-password.component.html
@@ -12,13 +12,14 @@
                    id="new-password"
                    class="password"
                    placeholder="Type a new password here"
-                   ngControl="password">
+                   ngControl="password"
+                   #password="ngForm">
 
          </div>
-         <sp-validation-notification *ngIf="isRequired('password')" [message]="'Password is required'"></sp-validation-notification>
-         <sp-validation-notification *ngIf="isInsufficientLength('password')" [message]="'Password is too short'"></sp-validation-notification>
-         <sp-validation-notification *ngIf="isLengthExcess('password')" [message]="'Password is too long'"></sp-validation-notification>
-         <sp-validation-notification *ngIf="isUnhandledError('password')" [message]="'Password is incorrect'"></sp-validation-notification>
+         <sp-validation-notification *ngIf="isRequired(password)" [message]="'Password is required'"></sp-validation-notification>
+         <sp-validation-notification *ngIf="isInsufficientLength(password)" [message]="'Password is too short'"></sp-validation-notification>
+         <sp-validation-notification *ngIf="isLengthExcess(password)" [message]="'Password is too long'"></sp-validation-notification>
+         <sp-validation-notification *ngIf="isUnhandledError(password)" [message]="'Password is incorrect'"></sp-validation-notification>
 
          <div class="input-control">
             <label for="repeat-password">Repeat password:</label>
@@ -28,15 +29,11 @@
                    id="repeat-password"
                    class="password"
                    placeholder="Repeat the password here"
-                   ngControl="passwordRepeat"/>
+                   ngControl="passwordRepeat"
+                   #passwordRepeat="ngForm"/>
 
          </div>
-         <sp-validation-notification *ngIf="isRequired('password')" [message]="'Password is required'"></sp-validation-notification>
-         <sp-validation-notification *ngIf="isInsufficientLength('password')" [message]="'Password is too short'"></sp-validation-notification>
-         <sp-validation-notification *ngIf="isLengthExcess('password')" [message]="'Password is too long'"></sp-validation-notification>
-         <sp-validation-notification *ngIf="isUnhandledError('password')" [message]="'Password is incorrect'"></sp-validation-notification>
-         <sp-validation-notification *ngIf="isEqual('passwordRepeat', 'password')" [message]="'Passwords are not equal'"></sp-validation-notification>
-
+         <sp-validation-notification *ngIf="isNotEqual(passwordRepeat, password)" [message]="'Passwords are not equal'"></sp-validation-notification>
          <button mdRaisedButton class="md-primary next-btn">Change password</button>
       </div>
    </form>
