[SP-52] All the cases have specified and general unhandled error validation methids

--- a/lib/account/change-password/change-password.component.html
+++ b/lib/account/change-password/change-password.component.html
@@ -19,7 +19,7 @@
          <sp-validation-notification *ngIf="isRequired(password)" [message]="'Password is required'"></sp-validation-notification>
          <sp-validation-notification *ngIf="isInsufficientLength(password)" [message]="'Password is too short'"></sp-validation-notification>
          <sp-validation-notification *ngIf="isLengthExcess(password)" [message]="'Password is too long'"></sp-validation-notification>
-         <sp-validation-notification *ngIf="isUnhandledError(password)" [message]="'Password is incorrect'"></sp-validation-notification>
+         <sp-validation-notification *ngIf="isPasswordUnhandledError(password)" [message]="'Password is incorrect'"></sp-validation-notification>
 
          <div class="input-control">
             <label for="repeat-password">Repeat password:</label>
