[SP-52] Added unit test for isEqual method

--- a/lib/account/change-password/change-password.component.html
+++ b/lib/account/change-password/change-password.component.html
@@ -19,7 +19,7 @@
          <sp-validation-notification *ngIf="isRequired(password)" [message]="'Password is required'"></sp-validation-notification>
          <sp-validation-notification *ngIf="isInsufficientLength(password)" [message]="'Password is too short'"></sp-validation-notification>
          <sp-validation-notification *ngIf="isLengthExcess(password)" [message]="'Password is too long'"></sp-validation-notification>
-         <sp-validation-notification *ngIf="isPasswordUnhandledError(password)" [message]="'Password is incorrect'"></sp-validation-notification>
+         <sp-validation-notification *ngIf="isNonRangeError(password)" [message]="'Password is incorrect'"></sp-validation-notification>
 
          <div class="input-control">
             <label for="repeat-password">Repeat password:</label>
@@ -33,7 +33,7 @@
                    #passwordRepeat="ngForm"/>
 
          </div>
-         <sp-validation-notification *ngIf="isNotEqual(passwordRepeat, password)" [message]="'Passwords are not equal'"></sp-validation-notification>
+         <sp-validation-notification *ngIf="!isEqual(passwordRepeat, password)" [message]="'Passwords are not equal'"></sp-validation-notification>
          <button mdRaisedButton class="md-primary next-btn">Change password</button>
       </div>
    </form>
