--- a/lib/account/restore-access/restore-access.component.html
+++ b/lib/account/restore-access/restore-access.component.html
@@ -18,7 +18,7 @@
 
          </div>
          <sp-validation-notification *ngIf="isRequired(email)" [message]="'Email is required'"></sp-validation-notification>
-         <sp-validation-notification *ngIf="isGeneralUnhandledError(email)" [message]="'Email is incorrect'"></sp-validation-notification>
+         <sp-validation-notification *ngIf="isNonRequiredError(email)" [message]="'Email is incorrect'"></sp-validation-notification>
          <a mdRaisedButton class="md-primary next-btn" [routerLink]="['ChangePassword']">Next</a>
       </div>
    </form>
