--- a/lib/account/error-authorization/error-authorization.component.html
+++ b/lib/account/error-authorization/error-authorization.component.html
@@ -17,7 +17,7 @@
 
          </div>
          <sp-validation-notification *ngIf="isRequired(email)" [message]="'Email is required'"></sp-validation-notification>
-         <sp-validation-notification *ngIf="isNonRequiredError(email)" [message]="'Email is incorrect'"></sp-validation-notification>
+         <sp-validation-notification *ngIf="!hasRequiredError(email)" [message]="'Email is incorrect'"></sp-validation-notification>
          <button mdRaisedButton class="md-primary next-btn">Repeat</button>
          <button mdRaisedButton class="custom-md-success sign-up-btn next-btn" [routerLink]="['Home']">Sign up</button>
       </div>
