--- a/lib/shared/header/login/login.component.html
+++ b/lib/shared/header/login/login.component.html
@@ -5,7 +5,7 @@
          <label for="current-email">Email</label>
          <input type="text" name="email" id="current-email" ngControl="email" #email="ngForm"/>
          <sp-validation-notification *ngIf="isRequired(email)" [message]="'Email is required'"></sp-validation-notification>
-         <sp-validation-notification *ngIf="isNonRequiredError(email)" [message]="'Email is incorrect'"></sp-validation-notification>
+         <sp-validation-notification *ngIf="!hasRequiredError(email)" [message]="'Email is incorrect'"></sp-validation-notification>
          <md-checkbox aria-label="Remember me" class="helper" md-no-ink>Remember me</md-checkbox>
       </div>
 
@@ -15,7 +15,7 @@
          <sp-validation-notification *ngIf="isRequired(password)" [message]="'Password is required'"></sp-validation-notification>
          <sp-validation-notification *ngIf="isInsufficientLength(password)" [message]="'Password is too short'"></sp-validation-notification>
          <sp-validation-notification *ngIf="isLengthExcess(password)" [message]="'Password is too long'"></sp-validation-notification>
-         <sp-validation-notification *ngIf="isNonRangeError(password)" [message]="'Password is incorrect'"></sp-validation-notification>
+         <sp-validation-notification *ngIf="!hasRangeError(password)" [message]="'Password is incorrect'"></sp-validation-notification>
          <a [routerLink]="['RestoreAccess']" class="helper">Forgot password ?</a>
       </div>
 
