--- a/lib/app.component.html
+++ b/lib/app.component.html
@@ -1,5 +1,7 @@
 <div class="app">
-    <sp-header class="header"></sp-header>
+    <sp-header class="header">
+        <sp-login></sp-login>
+    </sp-header>
     <div class="content">
         <router-outlet></router-outlet>
     </div>
