[SP-10, SP-19] Api middleware handle all token related work, component reacts on authentification changes

--- a/lib/app.component.html
+++ b/lib/app.component.html
@@ -1,6 +1,7 @@
 <div class="app">
     <sp-header class="header">
-        <sp-login></sp-login>
+        <sp-login *ngIf="!isAuthenticated"></sp-login>
+        <div *ngIf="isAuthenticated">Hello, world!</div>
     </sp-header>
     <div class="content">
         <router-outlet></router-outlet>
