--- a/lib/account-management/restore-access/restore-access.component.less
+++ b/lib/account-management/restore-access/restore-access.component.less
@@ -23,7 +23,7 @@
         width: 15%;
       }
 
-      .email {
+      input {
         flex: 1;
         font-family: cursive;
         font-size: 1em;
