--- a/lib/account-management/restore-access/restore-access-email/restore-access-email.component.html
+++ b/lib/account-management/restore-access/restore-access-email/restore-access-email.component.html
@@ -1,26 +1,31 @@
 <form name="restore-access-email-form" class="form" [ngFormModel]="form">
 
-    <div *ngIf="!isUserNotFound" class="description">Please, input your email to restore access</div>
-    <div *ngIf="isUserNotFound" class="description">User not found</div>
+    <div *ngIf="!isUserNotFound" id="enter-email-desc" class="description">
+        Please, input your email to restore access
+    </div>
+    <div *ngIf="isUserNotFound" id="user-not-found-desc" class="description">User not found</div>
 
-    <div class="error" *ngIf="isInvalidCode">Invalid code</div>
+    <div *ngIf="isInvalidCode" id="invalid-code-error" class="error">Invalid code</div>
 
     <div class="input-group">
 
         <div class="input-control">
-            <label for="restore-access">Email:</label>
+            <label for="restore-access-email">Email:</label>
 
             <input type="text"
                    name="email"
-                   id="restore-access"
+                   id="restore-access-email"
                    class="email"
                    placeholder="Insert email here"
                    ngControl="email"
                    #email="ngForm"/>
 
         </div>
-        <sp-validation-notification *ngIf="isRequired(email)" [message]="'Email is required'"></sp-validation-notification>
-        <sp-validation-notification *ngIf="!hasRequiredError(email)" [message]="'Email is incorrect'"></sp-validation-notification>
+        <sp-validation-notification id="email-required-error" *ngIf="isRequired(email)"
+                                    [message]="'Email is required'"></sp-validation-notification>
+        <sp-validation-notification id="email-incorrect-error" *ngIf="!hasRequiredError(email)"
+                                    [message]="'Email is incorrect'"></sp-validation-notification>
+
         <a mdRaisedButton class="md-primary next-btn" (click)="getCode()">Next</a>
     </div>
 </form>
